fixed user display and navbar header based on auth

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -243,6 +243,11 @@ img {
   height: 100%;
 }
 
+/* Fonts */
+.agent-font {
+  font-family: "Merriweather", serif;
+}
+
 /* Forms */
 .form .form-group {
   margin: 1.2rem 0;
